--- a/0-Start/4.Data_Visualization.ipynb
+++ b/0-Start/4.Data_Visualization.ipynb
@@ -52116,11 +52116,313 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "id": "08f92869-d708-42e0-9b6e-020d736824ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "new Promise(function(resolve, reject) {\n",
+       "    var script = document.createElement(\"script\");\n",
+       "    script.onload = resolve;\n",
+       "    script.onerror = reject;\n",
+       "    script.src = \"https://assets.pyecharts.org/assets/v5/echarts.min.js\";\n",
+       "    document.head.appendChild(script);\n",
+       "}).then(() => {\n",
+       "new Promise(function(resolve, reject) {\n",
+       "    var script = document.createElement(\"script\");\n",
+       "    script.onload = resolve;\n",
+       "    script.onerror = reject;\n",
+       "    script.src = \"https://assets.pyecharts.org/assets/v5/maps/china.js\";\n",
+       "    document.head.appendChild(script);\n",
+       "}).then(() => {\n",
+       "\n",
+       "});\n",
+       "});"
+      ],
+      "text/plain": [
+       "<pyecharts.render.display.Javascript at 0x7f17c83a1210>"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    ('广东', 594), ('浙江', 438), ('四川', 316), ('北京', 269), ('山东', 248),\n",
+    "    ('江苏', 234), ('湖南', 196), ('福建', 166), ('河南', 153), ('辽宁', 152),\n",
+    "    ('上海', 138), ('河北', 86), ('安徽', 79), ('湖北', 75), ('黑龙江', 70), \n",
+    "    ('陕西', 63), ('吉林', 59), ('江西', 56), ('重庆', 46), ('贵州', 39),\n",
+    "    ('山西', 37), ('云南', 33), ('广西', 24), ('天津', 22), ('新疆', 21),\n",
+    "    ('海南', 18), ('内蒙古', 14), ('台湾', 11), ('甘肃', 7), ('广西壮族自治区', 4),\n",
+    "    ('香港', 4), ('青海', 3), ('新疆维吾尔自治区', 3), ('内蒙古自治区', 3), ('宁夏', 1)\n",
+    "]\n",
+    "\n",
+    "import pyecharts.options as opts\n",
+    "from pyecharts.charts import Map\n",
+    "\n",
+    "map_chart = Map(init_opts=opts.InitOpts(width='1000px', height='1000px'))\n",
+    "map_chart.add('', data, 'china', is_roam=False)\n",
+    "map_chart.load_javascript()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "db464818-8c00-4fe9-a3ae-04e007a46407",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<!DOCTYPE html>\n",
+       "<html>\n",
+       "<head>\n",
+       "    <meta charset=\"UTF-8\">\n",
+       "</head>\n",
+       "<body>\n",
+       "        <div id=\"598f8c3fd7da440a944a9787fa6b69f7\" class=\"chart-container\" style=\"width:1000px; height:1000px; \"></div>\n",
+       "    <script>\n",
+       "        var chart_598f8c3fd7da440a944a9787fa6b69f7 = echarts.init(\n",
+       "            document.getElementById('598f8c3fd7da440a944a9787fa6b69f7'), 'white', {renderer: 'canvas'});\n",
+       "        var option_598f8c3fd7da440a944a9787fa6b69f7 = {\n",
+       "    \"animation\": true,\n",
+       "    \"animationThreshold\": 2000,\n",
+       "    \"animationDuration\": 1000,\n",
+       "    \"animationEasing\": \"cubicOut\",\n",
+       "    \"animationDelay\": 0,\n",
+       "    \"animationDurationUpdate\": 300,\n",
+       "    \"animationEasingUpdate\": \"cubicOut\",\n",
+       "    \"animationDelayUpdate\": 0,\n",
+       "    \"aria\": {\n",
+       "        \"enabled\": false\n",
+       "    },\n",
+       "    \"color\": [\n",
+       "        \"#5470c6\",\n",
+       "        \"#91cc75\",\n",
+       "        \"#fac858\",\n",
+       "        \"#ee6666\",\n",
+       "        \"#73c0de\",\n",
+       "        \"#3ba272\",\n",
+       "        \"#fc8452\",\n",
+       "        \"#9a60b4\",\n",
+       "        \"#ea7ccc\"\n",
+       "    ],\n",
+       "    \"series\": [\n",
+       "        {\n",
+       "            \"type\": \"map\",\n",
+       "            \"label\": {\n",
+       "                \"show\": true,\n",
+       "                \"margin\": 8\n",
+       "            },\n",
+       "            \"map\": \"china\",\n",
+       "            \"data\": [\n",
+       "                {\n",
+       "                    \"name\": \"\\u5e7f\\u4e1c\",\n",
+       "                    \"value\": 594\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u6d59\\u6c5f\",\n",
+       "                    \"value\": 438\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u56db\\u5ddd\",\n",
+       "                    \"value\": 316\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5317\\u4eac\",\n",
+       "                    \"value\": 269\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5c71\\u4e1c\",\n",
+       "                    \"value\": 248\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u6c5f\\u82cf\",\n",
+       "                    \"value\": 234\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u6e56\\u5357\",\n",
+       "                    \"value\": 196\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u798f\\u5efa\",\n",
+       "                    \"value\": 166\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u6cb3\\u5357\",\n",
+       "                    \"value\": 153\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u8fbd\\u5b81\",\n",
+       "                    \"value\": 152\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u4e0a\\u6d77\",\n",
+       "                    \"value\": 138\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u6cb3\\u5317\",\n",
+       "                    \"value\": 86\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5b89\\u5fbd\",\n",
+       "                    \"value\": 79\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u6e56\\u5317\",\n",
+       "                    \"value\": 75\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u9ed1\\u9f99\\u6c5f\",\n",
+       "                    \"value\": 70\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u9655\\u897f\",\n",
+       "                    \"value\": 63\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5409\\u6797\",\n",
+       "                    \"value\": 59\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u6c5f\\u897f\",\n",
+       "                    \"value\": 56\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u91cd\\u5e86\",\n",
+       "                    \"value\": 46\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u8d35\\u5dde\",\n",
+       "                    \"value\": 39\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5c71\\u897f\",\n",
+       "                    \"value\": 37\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u4e91\\u5357\",\n",
+       "                    \"value\": 33\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5e7f\\u897f\",\n",
+       "                    \"value\": 24\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5929\\u6d25\",\n",
+       "                    \"value\": 22\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u65b0\\u7586\",\n",
+       "                    \"value\": 21\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u6d77\\u5357\",\n",
+       "                    \"value\": 18\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5185\\u8499\\u53e4\",\n",
+       "                    \"value\": 14\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u53f0\\u6e7e\",\n",
+       "                    \"value\": 11\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u7518\\u8083\",\n",
+       "                    \"value\": 7\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5e7f\\u897f\\u58ee\\u65cf\\u81ea\\u6cbb\\u533a\",\n",
+       "                    \"value\": 4\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u9999\\u6e2f\",\n",
+       "                    \"value\": 4\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u9752\\u6d77\",\n",
+       "                    \"value\": 3\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u65b0\\u7586\\u7ef4\\u543e\\u5c14\\u81ea\\u6cbb\\u533a\",\n",
+       "                    \"value\": 3\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5185\\u8499\\u53e4\\u81ea\\u6cbb\\u533a\",\n",
+       "                    \"value\": 3\n",
+       "                },\n",
+       "                {\n",
+       "                    \"name\": \"\\u5b81\\u590f\",\n",
+       "                    \"value\": 1\n",
+       "                }\n",
+       "            ],\n",
+       "            \"roam\": false,\n",
+       "            \"aspectScale\": 0.75,\n",
+       "            \"nameProperty\": \"name\",\n",
+       "            \"selectedMode\": false,\n",
+       "            \"zoom\": 1,\n",
+       "            \"zlevel\": 0,\n",
+       "            \"z\": 2,\n",
+       "            \"seriesLayoutBy\": \"column\",\n",
+       "            \"datasetIndex\": 0,\n",
+       "            \"mapValueCalculation\": \"sum\",\n",
+       "            \"showLegendSymbol\": true,\n",
+       "            \"emphasis\": {}\n",
+       "        }\n",
+       "    ],\n",
+       "    \"legend\": [\n",
+       "        {\n",
+       "            \"data\": [\n",
+       "                \"\"\n",
+       "            ],\n",
+       "            \"selected\": {}\n",
+       "        }\n",
+       "    ],\n",
+       "    \"tooltip\": {\n",
+       "        \"show\": true,\n",
+       "        \"trigger\": \"item\",\n",
+       "        \"triggerOn\": \"mousemove|click\",\n",
+       "        \"axisPointer\": {\n",
+       "            \"type\": \"line\"\n",
+       "        },\n",
+       "        \"showContent\": true,\n",
+       "        \"alwaysShowContent\": false,\n",
+       "        \"showDelay\": 0,\n",
+       "        \"hideDelay\": 100,\n",
+       "        \"enterable\": false,\n",
+       "        \"confine\": false,\n",
+       "        \"appendToBody\": false,\n",
+       "        \"transitionDuration\": 0.4,\n",
+       "        \"textStyle\": {\n",
+       "            \"fontSize\": 14\n",
+       "        },\n",
+       "        \"borderWidth\": 0,\n",
+       "        \"padding\": 5,\n",
+       "        \"order\": \"seriesAsc\"\n",
+       "    }\n",
+       "};\n",
+       "        chart_598f8c3fd7da440a944a9787fa6b69f7.setOption(option_598f8c3fd7da440a944a9787fa6b69f7);\n",
+       "    </script>\n",
+       "</body>\n",
+       "</html>\n"
+      ],
+      "text/plain": [
+       "<pyecharts.render.display.HTML at 0x7f17970b2590>"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map_chart.render_notebook()"
+   ]
   }
  ],
  "metadata": {
