--- a/1-Basic Alogrithm/1. Dynamic Programming.ipynb
+++ b/1-Basic Alogrithm/1. Dynamic Programming.ipynb
@@ -2289,7 +2289,7 @@
    "id": "103bca28-6df0-444c-95b1-352717802d16",
    "metadata": {},
    "source": [
-    "## Q24: 139\n",
+    "## Q24: 139 单词拆分\n",
     "https://leetcode.cn/problems/word-break/description/\n",
     "\n",
     "给你一个字符串 s 和一个字符串列表 wordDict 作为字典。如果可以利用字典中出现的一个或多个单词拼接出 s 则返回 true。\n",
@@ -2318,11 +2318,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 305,
    "id": "71746ae0-a82f-48a1-bdf7-5dceb8e61221",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def wordBreak(s, wordDict):\n",
+    "    pass\n",
+    "s = \"catsandog\"\n",
+    "wordDict = [\"cats\", \"dog\", \"sand\", \"and\", \"cat\"]\n",
+    "wordBreak(s, wordDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0669b0f0-9a96-4a99-a111-c210c9c3fa7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def wordBreak(self, s: str, wordDict: List[str]) -> bool:"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2330,8 +2347,55 @@
    "metadata": {},
    "source": [
     "# 7. 股票问题\n",
-    "## Q25 121\n",
-    "#"
+    "## Q25 121. 买卖股票的最佳时机\n",
+    "https://leetcode.cn/problems/best-time-to-buy-and-sell-stock/description/\n",
+    "\n",
+    "给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。\n",
+    "\n",
+    "你只能选择 某一天 买入这只股票，并选择在 未来的某一个不同的日子 卖出该股票。设计一个算法来计算你所能获取的最大利润。\n",
+    "\n",
+    "返回你可以从这笔交易中获取的最大利润。如果你不能获取任何利润，返回 0 。\n",
+    "\n",
+    " \n",
+    "\n",
+    "示例 1：\n",
+    "\n",
+    "输入：[7,1,5,3,6,4]\n",
+    "输出：5\n",
+    "解释：在第 2 天（股票价格 = 1）的时候买入，在第 5 天（股票价格 = 6）的时候卖出，最大利润 = 6-1 = 5 。\n",
+    "     注意利润不能是 7-1 = 6, 因为卖出价格需要大于买入价格；同时，你不能在买入前卖出股票。\n",
+    "示例 2：\n",
+    "\n",
+    "输入：prices = [7,6,4,3,1]\n",
+    "输出：0\n",
+    "解释：在这种情况下, 没有交易完成, 所以最大利润为 0。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b0090be-c0a3-4169-ae16-edeb16afd3b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxProfit(prices):\n",
+    "    res = 0\n",
+    "    for i in prices:\n",
+    "        res = max  \n",
+    "        \n",
+    "prices = [7,1,5,3,6,4]\n",
+    "maxProfit(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6976db19-5418-486e-a125-1b74b348c1d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:"
    ]
   },
   {
