--- a/1-Basic Alogrithm/1. Dynamic Programming.ipynb
+++ b/1-Basic Alogrithm/1. Dynamic Programming.ipynb
@@ -2318,15 +2318,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 316,
    "id": "71746ae0-a82f-48a1-bdf7-5dceb8e61221",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 316,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def wordBreak(s, wordDict):\n",
-    "    pass\n",
-    "s = \"catsandog\"\n",
-    "wordDict = [\"cats\", \"dog\", \"sand\", \"and\", \"cat\"]\n",
+    "    wordSet = set(wordDict)\n",
+    "    n = len(s)\n",
+    "    dp = [False] * (n + 1)\n",
+    "    dp[0] = True\n",
+    "    \n",
+    "    for i in range(1, n + 1):\n",
+    "        for j in range(i):\n",
+    "            subword = s[j: i]\n",
+    "            if subword in wordDict:\n",
+    "                if dp[j] == True:\n",
+    "                    dp[i] = True\n",
+    "\n",
+    "    return dp[-1]\n",
+    "    \n",
+    "\n",
+    "#s = \"catsandog\"\n",
+    "#wordDict = [\"cats\", \"dog\", \"sand\", \"and\", \"cat\"]\n",
+    "#s = \"applepenapple\"\n",
+    "#wordDict = [\"apple\", \"pen\"]\n",
+    "s = \"applepenapple\"\n",
+    "wordDict = [\"apple\", \"pen\"]\n",
     "wordBreak(s, wordDict)"
    ]
   },
@@ -2338,7 +2367,20 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def wordBreak(self, s: str, wordDict: List[str]) -> bool:"
+    "    def wordBreak(self, s: str, wordDict: List[str]) -> bool:\n",
+    "        wordSet = set(wordDict)\n",
+    "        n = len(s)\n",
+    "        dp = [False] * (n + 1)\n",
+    "        dp[0] = True\n",
+    "        \n",
+    "        for i in range(1, n + 1):\n",
+    "            for j in range(i):\n",
+    "                subword = s[j: i]\n",
+    "                if subword in wordDict:\n",
+    "                    if dp[j] == True:\n",
+    "                        dp[i] = True\n",
+    "    \n",
+    "        return dp[-1]"
    ]
   },
   {
@@ -2360,28 +2402,41 @@
     "\n",
     "示例 1：\n",
     "\n",
-    "输入：[7,1,5,3,6,4]\n",
-    "输出：5\n",
-    "解释：在第 2 天（股票价格 = 1）的时候买入，在第 5 天（股票价格 = 6）的时候卖出，最大利润 = 6-1 = 5 。\n",
-    "     注意利润不能是 7-1 = 6, 因为卖出价格需要大于买入价格；同时，你不能在买入前卖出股票。\n",
-    "示例 2：\n",
+    "输入：[7,1,5,3,6,4] <br/>\n",
+    "输出：5 <br/>\n",
+    "解释：在第 2 天（股票价格 = 1）的时候买入，在第 5 天（股票价格 = 6）的时候卖出，最大利润 = 6-1 = 5 。 <br/>\n",
+    "     注意利润不能是 7-1 = 6, 因为卖出价格需要大于买入价格；同时，你不能在买入前卖出股票。 <br/>\n",
+    "示例 2： <br/>\n",
     "\n",
-    "输入：prices = [7,6,4,3,1]\n",
-    "输出：0\n",
-    "解释：在这种情况下, 没有交易完成, 所以最大利润为 0。"
+    "输入：prices = [7,6,4,3,1] <br/>\n",
+    "输出：0 <br/>\n",
+    "解释：在这种情况下, 没有交易完成, 所以最大利润为 0。 <br/>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 334,
    "id": "6b0090be-c0a3-4169-ae16-edeb16afd3b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def maxProfit(prices):\n",
-    "    res = 0\n",
-    "    for i in prices:\n",
-    "        res = max  \n",
+    "    cost, profit = float(\"+inf\"), 0\n",
+    "    for price in prices:\n",
+    "        cost = min(cost, price)\n",
+    "        profit = max(profit, price - cost)\n",
+    "    return profit\n",
     "        \n",
     "prices = [7,1,5,3,6,4]\n",
     "maxProfit(prices)"
@@ -2395,7 +2450,67 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def maxProfit(self, prices: List[int]) -> int:"
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        cost, profit = float(\"+inf\"), 0\n",
+    "        for price in prices:\n",
+    "            cost = min(cost, price)\n",
+    "            profit = max(profit, price - cost)\n",
+    "        return profit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8ce9aee-0b81-475a-ad10-b6888ab9bf51",
+   "metadata": {},
+   "source": [
+    "Method 2: 暴力解法，超出时间限制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "id": "3690b903-dc29-40a2-a922-7d2db7b85456",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def maxProfit(prices):\n",
+    "    profit = 0\n",
+    "    n = len(prices)\n",
+    "    for i in range(n):\n",
+    "        for j in range(i + 1, n):\n",
+    "            profit = max(profit,  prices[j] - prices[i])\n",
+    "    return profit\n",
+    "        \n",
+    "prices = [7,1,5,3,6,4]\n",
+    "maxProfit(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a44ef60b-d36c-4d09-b075-549b20653981",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        profit = 0\n",
+    "        n = len(prices)\n",
+    "        for i in range(n):\n",
+    "            for j in range(i + 1, n):\n",
+    "                profit = max(profit,  prices[j] - prices[i])\n",
+    "        return profit"
    ]
   },
   {
@@ -2403,13 +2518,91 @@
    "id": "45b090f9-2773-49bd-9f41-3fb8d18e8699",
    "metadata": {},
    "source": [
-    "# Q26 122\n"
+    "# Q26 122. 买卖股票的最佳时机 II\n",
+    "https://leetcode.cn/problems/best-time-to-buy-and-sell-stock-ii/description/\n",
+    "\n",
+    "给你一个整数数组 prices ，其中 prices[i] 表示某支股票第 i 天的价格。\n",
+    "\n",
+    "在每一天，你可以决定是否购买和/或出售股票。你在任何时候 最多 只能持有 一股 股票。你也可以先购买，然后在 同一天 出售。\n",
+    "\n",
+    "返回 你能获得的 最大 利润 。\n",
+    "\n",
+    " \n",
+    "\n",
+    "示例 1：\n",
+    "\n",
+    "输入：prices = [7,1,5,3,6,4]\n",
+    "输出：7\n",
+    "解释：在第 2 天（股票价格 = 1）的时候买入，在第 3 天（股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5 - 1 = 4。\n",
+    "随后，在第 4 天（股票价格 = 3）的时候买入，在第 5 天（股票价格 = 6）的时候卖出, 这笔交易所能获得利润 = 6 - 3 = 3。\n",
+    "最大总利润为 4 + 3 = 7 。\n",
+    "示例 2：\n",
+    "\n",
+    "输入：prices = [1,2,3,4,5]\n",
+    "输出：4\n",
+    "解释：在第 1 天（股票价格 = 1）的时候买入，在第 5 天 （股票价格 = 5）的时候卖出, 这笔交易所能获得利润 = 5 - 1 = 4。\n",
+    "最大总利润为 4 。\n",
+    "示例 3：\n",
+    "\n",
+    "输入：prices = [7,6,4,3,1]\n",
+    "输出：0\n",
+    "解释：在这种情况下, 交易无法获得正利润，所以不参与交易可以获得最大利润，最大利润为 0。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "id": "036e12a6-e73b-4dda-b476-28f69c46167d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 318,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def maxProfit(prices):\n",
+    "    cost, profit = float(\"+inf\"), 0\n",
+    "    for price in prices:\n",
+    "        cost = min(cost, price)\n",
+    "        profit = max(profit, price - cost)\n",
+    "    return profit\n",
+    "\n",
+    "prices = [7,1,5,3,6,4]\n",
+    "maxProfit(prices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6203cada-e6fb-4d24-a3b3-51a387cca978",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff8e1a42-9cc8-442c-b5b7-c72d5732e8a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "15ce648f-da5e-48c4-a4b0-dcc4debf2142",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Q7 123\n"
    ]
