--- a/1-Basic Alogrithm/0. Random.ipynb
+++ b/1-Basic Alogrithm/0. Random.ipynb
@@ -7484,7 +7484,195 @@
    "id": "1948699b-7b2f-4ebf-9d27-f28b5aa3ef0d",
    "metadata": {},
    "source": [
-    "# 109"
+    "# 109 859. 亲密字符串\n",
+    "https://leetcode.cn/problems/buddy-strings/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1643,
+   "id": "73c43fff-e5be-4d60-b971-51d66c669616",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1643,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Wrong\n",
+    "def buddyStrings(s, goal):\n",
+    "    if sorted(s) != sorted(goal):\n",
+    "        return False\n",
+    "    if len(set(s)) == 1:\n",
+    "        return True\n",
+    "    temp = zip(s, goal)\n",
+    "    res = 0\n",
+    "    ans = []\n",
+    "    for i in temp:\n",
+    "        if i[0] != i[1]:\n",
+    "            res += 1\n",
+    "    if res == 2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "s = \"ab\"\n",
+    "goal = \"ba\"\n",
+    "#s = \"ab\"\n",
+    "#goal = \"ab\"\n",
+    "#s = \"aa\"\n",
+    "#goal = \"aa\"\n",
+    "buddyStrings(s, goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1674,
+   "id": "48f74de1-52ce-4229-a5d5-14955b12c57a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 1674,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Timeout\n",
+    "def buddyStrings(s, goal):\n",
+    "    if sorted(s) != sorted(goal):\n",
+    "        return False\n",
+    "    if len(s) == 1:\n",
+    "        return False\n",
+    "    if len(set(s)) == 1:\n",
+    "        return True\n",
+    "    n = len(s)\n",
+    "    for i in range(n-1):\n",
+    "        for j in range(i + 1, n):\n",
+    "            temp = list(s)\n",
+    "#            print(temp)\n",
+    "            temp[i], temp[j] = temp[j], temp[i]\n",
+    "#            print(i, j, temp, goal)\n",
+    "            if \"\".join(temp) == goal:\n",
+    "                return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "s = \"ab\"\n",
+    "goal = \"ba\"\n",
+    "s = \"ab\"\n",
+    "goal = \"ab\"\n",
+    "s = \"aa\"\n",
+    "goal = \"aa\"\n",
+    "s = \"a\"\n",
+    "goal = \"a\"\n",
+    "#s= \"aaaaaaabc\"\n",
+    "#goal = \"aaaaaaacb\"\n",
+    "\n",
+    "buddyStrings(s, goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1696,
+   "id": "5103d973-2877-4fd6-adbd-9ddc4717daf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1696,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Timeout\n",
+    "def buddyStrings(s, goal):\n",
+    "    if len(s) != len(goal):\n",
+    "        return False\n",
+    "    if s == goal:\n",
+    "        if len(set(s)) < len(goal):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    diff = [(a, b ) for a, b in zip(s, goal) if a != b]\n",
+    "    return len(diff) == 2and diff[0][0] == diff[1][1] and diff[0][1] == diff[1][0]\n",
+    "\n",
+    "#s = \"ab\"\n",
+    "#goal = \"ba\"\n",
+    "#s = \"ab\"\n",
+    "#goal = \"ab\"\n",
+    "#s = \"aa\"\n",
+    "#goal = \"aa\"\n",
+    "#s = \"a\"\n",
+    "#goal = \"a\"\n",
+    "s= \"aaaaaaabc\"\n",
+    "goal = \"aaaaaaacb\"\n",
+    "\n",
+    "buddyStrings(s, goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dc166d7-f494-40c5-9a79-b2953d34e21d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def buddyStrings(self, s: str, goal: str) -> bool:\n",
+    "        if len(s) != len(goal):\n",
+    "            return False\n",
+    "        if s == goal:\n",
+    "            if len(set(s)) < len(goal): \n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "        diff = [(a, b) for a, b in zip(s, goal) if a != b]\n",
+    "        return len(diff) == 2 and diff[0][0] == diff[1][1] and diff[0][1] == diff[1][0]\n",
+    "\n",
+    "作者：力扣官方题解\n",
+    "链接：https://leetcode.cn/problems/buddy-strings/solutions/1090079/qin-mi-zi-fu-chuan-by-leetcode-solution-yyis/\n",
+    "来源：力扣（LeetCode）\n",
+    "著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "895bd3c7-07de-490d-b93a-96ddaf606a9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def buddyStrings(self, s: str, goal: str) -> bool:\n",
+    "        if len(s) != len(goal):\n",
+    "            return False\n",
+    "        if s == goal:\n",
+    "            if len(set(s)) < len(goal):\n",
+    "                return True\n",
+    "            else:\n",
+    "                return False\n",
+    "    \n",
+    "        diff = [(a, b ) for a, b in zip(s, goal) if a != b]\n",
+    "        return len(diff) == 2and diff[0][0] == diff[1][1] and diff[0][1] == diff[1][0]"
    ]
   },
   {
@@ -7492,7 +7680,97 @@
    "id": "19cd8bac-99ef-4427-91bf-3067ec501ca6",
    "metadata": {},
    "source": [
-    "# 110"
+    "# 110 860. 柠檬水找零\n",
+    "\n",
+    "https://leetcode.cn/problems/lemonade-change/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1682,
+   "id": "e3297ba5-f33a-44ae-943a-22e0b1aca31a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1682,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lemonadeChange(bills):\n",
+    "    res = {5: 0, 10: 0, 20: 0}\n",
+    "    for i in bills:\n",
+    "        if not res and i != 5:\n",
+    "            return False\n",
+    "        if not res and i == 5:\n",
+    "            res[5] += 1\n",
+    "        if res:\n",
+    "            if i == 5:\n",
+    "                res[5] += 1\n",
+    "            elif i == 10:\n",
+    "                if res[5]:\n",
+    "                    res[10] += 1\n",
+    "                    res[5] -= 1\n",
+    "                else:\n",
+    "                    return False\n",
+    "            elif i == 20:\n",
+    "                res[20] += 1\n",
+    "                flag = False\n",
+    "                if res[10] >=1 and res[5] >= 1:\n",
+    "                    res[10] -= 1\n",
+    "                    res[5] -= 1\n",
+    "                    flag = True\n",
+    "                elif res[5] >= 3 and not flag:\n",
+    "                    res[5] -= 3\n",
+    "                else: \n",
+    "                    return False\n",
+    "    return True\n",
+    "bills = [5,5,5,10,20]\n",
+    "lemonadeChange(bills)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f729d4da-b6b5-4b09-a8bb-cc20fa2cbd83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lemonadeChange(self, bills: List[int]) -> bool:\n",
+    "        res = {5: 0, 10: 0, 20: 0}\n",
+    "        for i in bills:\n",
+    "            if not res and i != 5:\n",
+    "                return False\n",
+    "            if not res and i == 5:\n",
+    "                res[5] += 1\n",
+    "            if res:\n",
+    "                if i == 5:\n",
+    "                    res[5] += 1\n",
+    "                elif i == 10:\n",
+    "                    if res[5]:\n",
+    "                        res[10] += 1\n",
+    "                        res[5] -= 1\n",
+    "                    else:\n",
+    "                        return False\n",
+    "                elif i == 20:\n",
+    "                    res[20] += 1\n",
+    "                    flag = False\n",
+    "                    if res[10] >=1 and res[5] >= 1:\n",
+    "                        res[10] -= 1\n",
+    "                        res[5] -= 1\n",
+    "                        flag = True\n",
+    "                    elif res[5] >= 3 and not flag:\n",
+    "                        res[5] -= 3\n",
+    "                    else: \n",
+    "                        return False\n",
+    "        return True"
    ]
   },
   {
@@ -7500,7 +7778,51 @@
    "id": "643c6392-f5ff-4e59-a950-9ddd098f320c",
    "metadata": {},
    "source": [
-    "# 111"
+    "# 111 867. 转置矩阵\n",
+    "https://leetcode.cn/problems/transpose-matrix/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1700,
+   "id": "8be04102-db5e-479c-8306-608609dcac7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 4, 7], [2, 5, 8], [3, 6, 9]]"
+      ]
+     },
+     "execution_count": 1700,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def transpose(matrix):\n",
+    "    s = np.matrix(matrix)\n",
+    "    s = s.transpose()\n",
+    "    s = s.tolist()\n",
+    "    return s\n",
+    "    \n",
+    "matrix = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "transpose(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6576c91-4622-400a-bdb8-5ee624b62b64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def transpose(self, matrix: List[List[int]]) -> List[List[int]]:\n",
+    "        s = np.matrix(matrix)\n",
+    "        s = s.transpose()\n",
+    "        s = s.tolist()\n",
+    "        return s"
    ]
   },
   {
@@ -7508,7 +7830,70 @@
    "id": "c0d6349a-b6cc-4b29-bfb4-9f4133fa7554",
    "metadata": {},
    "source": [
-    "# 112"
+    "# 112 868. 二进制间距\n",
+    "\n",
+    "https://leetcode.cn/problems/binary-gap/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1708,
+   "id": "ee95c5e1-de17-4bfe-b0fd-70a0e8dfecf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1708,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def binaryGap(n):\n",
+    "    s = bin(n)[2:]\n",
+    "    count = 0\n",
+    "    ans = []\n",
+    "    res = 0\n",
+    "    for i in range(len(s)):\n",
+    "        if s[i] == \"1\":\n",
+    "            ans.append(i)\n",
+    "    if len(ans) <= 1:\n",
+    "        return 0\n",
+    "    for i in range(1, len(ans)):\n",
+    "        res = max(res, ans[i] -ans[i - 1])\n",
+    "    return res\n",
+    "\n",
+    "n = 22\n",
+    "n = 8\n",
+    "n = 5\n",
+    "binaryGap(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2de032e6-09d4-4fba-b6db-290fc348f49e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def binaryGap(self, n: int) -> int:\n",
+    "        s = bin(n)[2:]\n",
+    "        count = 0\n",
+    "        ans = []\n",
+    "        res = 0\n",
+    "        for i in range(len(s)):\n",
+    "            if s[i] == \"1\":\n",
+    "                ans.append(i)\n",
+    "        if len(ans) <= 1:\n",
+    "            return 0\n",
+    "        for i in range(1, len(ans)):\n",
+    "            res = max(res, ans[i] -ans[i - 1])\n",
+    "        return res\n"
    ]
   },
   {
@@ -7516,7 +7901,99 @@
    "id": "257ff6f5-4099-4817-b5f8-3bd6954a51d7",
    "metadata": {},
    "source": [
-    "# 113"
+    "# 113  883. 三维形体投影面积\n",
+    "\n",
+    "https://leetcode.cn/problems/projection-area-of-3d-shapes/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1719,
+   "id": "f72b6604-c8fc-4b49-a5b9-2c5cc6ba5544",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4])"
+      ]
+     },
+     "execution_count": 1719,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid = [[1,2],[3,4]]\n",
+    "x = np.array(grid)\n",
+    "np.max(x, axis= 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dd9d421-9419-4b81-86df-e63d72be4531",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1732,
+   "id": "22faec46-2083-4ff2-9137-200a5867d7ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 1732,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def projectionArea(grid):\n",
+    "    xy = 0\n",
+    "    for i in grid:\n",
+    "        for j in i:\n",
+    "            if j != 0:\n",
+    "                xy += 1\n",
+    "    \n",
+    "    yz = sum(np.max(np.array(grid), axis = 0).tolist())\n",
+    "    xz = sum(np.max(np.array(grid), axis = 1).tolist())       \n",
+    "    return xy + yz +xz\n",
+    "\n",
+    "\n",
+    "grid = [[1,2],[3,4]]  #17\n",
+    "#grid = [[1,0],[0,2]]  #8\n",
+    "\n",
+    "\n",
+    "projectionArea(grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9678c2b-2cd5-4bc8-bfb8-d2b951fb2c04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "class Solution:\n",
+    "    def projectionArea(self, grid: List[List[int]]) -> int:\n",
+    "        xy = 0\n",
+    "        for i in grid:\n",
+    "            for j in i:\n",
+    "                if j != 0:\n",
+    "                    xy += 1\n",
+    "        \n",
+    "        yz = sum(np.max(np.array(grid), axis = 0).tolist())\n",
+    "        xz = sum(np.max(np.array(grid), axis = 1).tolist())       \n",
+    "        return xy + yz +xz"
    ]
   },
   {
@@ -7524,7 +8001,59 @@
    "id": "62ad5ac2-5e34-4845-988d-07f5a7a32740",
    "metadata": {},
    "source": [
-    "# 114 "
+    "# 114 884. 两句话中的不常见单词\n",
+    "\n",
+    "https://leetcode.cn/problems/uncommon-words-from-two-sentences/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1747,
+   "id": "d17b75fd-a6a1-4844-aa2d-0ea7a595315c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sweet', 'sour']"
+      ]
+     },
+     "execution_count": 1747,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def uncommonFromSentences(s1, s2):\n",
+    "    s = s1 + \" \" + s2\n",
+    "    res = Counter(s.split())\n",
+    "    ans = []\n",
+    "    for i in res:\n",
+    "        if res[i] == 1:\n",
+    "            ans.append(i)\n",
+    "    return ans\n",
+    "\n",
+    "s1 = \"this apple is sweet\"\n",
+    "s2 = \"this apple is sour\"\n",
+    "uncommonFromSentences(s1, s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52d3ac9f-311d-4704-95da-476be9c3b532",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def uncommonFromSentences(self, s1: str, s2: str) -> List[str]:\n",
+    "        s = s1 + \" \" + s2\n",
+    "        res = Counter(s.split())\n",
+    "        ans = []\n",
+    "        for i in res:\n",
+    "            if res[i] == 1:\n",
+    "                ans.append(i)\n",
+    "        return ans\n"
    ]
   },
   {
@@ -7532,7 +8061,47 @@
    "id": "bf17c04f-caa5-4cca-8bd7-1a988627acfa",
    "metadata": {},
    "source": [
-    "# 115"
+    "# 115 888. 公平的糖果交换\n",
+    "https://leetcode.cn/problems/fair-candy-swap/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1752,
+   "id": "e7599288-cad3-47e3-8b98-cedcecf7180a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([1, 2, 5], [2, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "def fairCandySwap(aliceSizes, bobSizes):\n",
+    "    s = combinations((aliceSizes, bobSizes), 2)\n",
+    "    for i in s:\n",
+    "        print(i)\n",
+    "\n",
+    "aliceSizes = [1,1]\n",
+    "bobSizes = [2,2]\n",
+    "aliceSizes = [1,2,5]\n",
+    "bobSizes = [2,4]\n",
+    "fairCandySwap(aliceSizes, bobSizes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "123c6f23-d4c4-4b59-8b32-605bc3446ce7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def fairCandySwap(self, aliceSizes: List[int], bobSizes: List[int]) -> List[int]:"
    ]
   },
   {
