--- a/1-Basic Alogrithm/0. Random.ipynb
+++ b/1-Basic Alogrithm/0. Random.ipynb
@@ -8721,40 +8721,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1911,
-   "id": "6f06ebf4-813f-4c82-9b03-f948250b334a",
+   "execution_count": 21,
+   "id": "c440de1a-2c6b-4712-ac88-1699863f6068",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1911], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "[4,5] - [1, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c440de1a-2c6b-4712-ac88-1699863f6068",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def validMountainArray(arr):\n",
     "    if len(arr) < 3:\n",
     "        return False\n",
     "    top = arr.index(max(arr))\n",
-    "    res = [arr]\n",
+    "    if top == len(arr) -1 or top == 0:\n",
+    "        return False\n",
+    "    for i in range(1, top + 1):\n",
+    "        if arr[i] <= arr[i - 1]:\n",
+    "            return False\n",
+    "    for i in range(top, len(arr) - 1):\n",
+    "        if arr[i] <= arr[i + 1]:\n",
+    "            return False\n",
+    "    return True\n",
     "\n",
     "arr = [0,3,2,1]\n",
+    "arr = [2,1]\n",
+    "arr = [3,5,5]\n",
+    "arr = [0,1,2,3,4,5,6,7,8,9]\n",
+    "arr = [9,8,7,6,5,4,3,2,1,0]\n",
+    "\n",
     "validMountainArray(arr)\n"
    ]
   },
@@ -8766,7 +8768,19 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def validMountainArray(self, arr: List[int]) -> bool:"
+    "    def validMountainArray(self, arr: List[int]) -> bool:\n",
+    "        if len(arr) < 3:\n",
+    "            return False\n",
+    "        top = arr.index(max(arr))\n",
+    "        if top == len(arr) -1 or top == 0:\n",
+    "            return False\n",
+    "        for i in range(1, top + 1):\n",
+    "            if arr[i] <= arr[i - 1]:\n",
+    "                return False\n",
+    "        for i in range(top, len(arr) - 1):\n",
+    "            if arr[i] <= arr[i + 1]:\n",
+    "                return False\n",
+    "        return True"
    ]
   },
   {
@@ -8774,7 +8788,67 @@
    "id": "91d87e7e-28af-44ab-8893-d0a006dd95a5",
    "metadata": {},
    "source": [
-    "# 125 "
+    "# 125 942. 增减字符串匹配\n",
+    "\n",
+    "https://leetcode.cn/problems/di-string-match/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "05a768ce-df0e-4ce2-9c9a-6a63187230ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2, 0, 1]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def diStringMatch(s):\n",
+    "    left, right, res = 0, len(s), []\n",
+    "    for i in s:\n",
+    "        if i == \"I\":\n",
+    "            res.append(left)\n",
+    "            left += 1\n",
+    "        else:\n",
+    "            res.append(right)\n",
+    "            right -= 1\n",
+    "    res.append(right)\n",
+    "    return res\n",
+    "    \n",
+    "\n",
+    "s = \"IDID\"\n",
+    "s = \"III\"\n",
+    "s = \"DDI\"\n",
+    "diStringMatch(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95d4ddda-ba6b-4d94-a183-a3382ce1d94c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def diStringMatch(self, s: str) -> List[int]:\n",
+    "        left, right, res = 0, len(s), []\n",
+    "        for i in s:\n",
+    "            if i == \"I\":\n",
+    "                res.append(left)\n",
+    "                left += 1\n",
+    "            else:\n",
+    "                res.append(right)\n",
+    "                right -= 1\n",
+    "        res.append(right)\n",
+    "        return res\n"
    ]
   },
   {
@@ -8782,15 +8856,64 @@
    "id": "da537594-cb36-4881-99c8-54f4d34d1509",
    "metadata": {},
    "source": [
-    "# 126 "
+    "# 126 \n",
+    "https://leetcode.cn/problems/delete-columns-to-make-sorted/description/"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e386a68e-b1b7-4dc0-b7a3-8cacffec4e4b",
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "6408ca9f-5c6c-48e5-8a04-ed99ef06c48f",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 127 "
+    "def minDeletionSize(strs):\n",
+    "    res = 0\n",
+    "    n = len(strs[0])\n",
+    "    for i in range(n):\n",
+    "        s = []\n",
+    "        for j in range(len(strs)):\n",
+    "            s.append(strs[j][i])\n",
+    "        if s != sorted(s):\n",
+    "            res += 1\n",
+    "    return res\n",
+    "    \n",
+    "strs = [\"cba\",\"daf\",\"ghi\"]\n",
+    "strs = [\"a\",\"b\"]\n",
+    "strs = [\"zyx\",\"wvu\",\"tsr\"]\n",
+    "minDeletionSize(strs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa0419e9-8461-437d-b337-1d44353e1852",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minDeletionSize(self, strs: List[str]) -> int:\n",
+    "        res = 0\n",
+    "        n = len(strs[0])\n",
+    "        for i in range(n):\n",
+    "            s = []\n",
+    "            for j in range(len(strs)):\n",
+    "                s.append(strs[j][i])\n",
+    "            if s != sorted(s):\n",
+    "                res += 1\n",
+    "        return res\n",
+    "        "
    ]
   },
   {
@@ -8798,19 +8921,316 @@
    "id": "4d339ecb-55fd-4f96-a4df-c6bd4f79a655",
    "metadata": {},
    "source": [
-    "# 128 "
+    "# 127 961. 在长度 2N 的数组中找出重复 N 次的元素\n",
+    "\n",
+    "https://leetcode.cn/problems/n-repeated-element-in-size-2n-array/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "3dcd5d40-6aff-4d34-a1e7-bf95a8a505d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "def repeatedNTimes(nums):\n",
+    "    n = len(nums) // 2\n",
+    "    s = Counter(nums)\n",
+    "    for i in s:\n",
+    "        if s[i]== n:\n",
+    "            return i\n",
+    "\n",
+    "nums = [1,2,3,3]\n",
+    "nums = [2,1,2,5,3,2]\n",
+    "nums = [5,1,5,2,5,3,5,4]\n",
+    "repeatedNTimes(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7708b964-d094-4e93-964f-aaa505eb3de8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def repeatedNTimes(self, nums: List[int]) -> int:\n",
+    "        n = len(nums) // 2\n",
+    "        s = Counter(nums)\n",
+    "        for i in s:\n",
+    "            if s[i]== n:\n",
+    "                return i\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "742feff9-0ffa-476f-8c26-0c3cb0cd43db",
+   "id": "b472bbad-aa1f-44b0-b7e3-8b5be4dd2352",
    "metadata": {},
+   "source": [
+    "# 128  976. 三角形的最大周长\n",
+    "https://leetcode.cn/problems/largest-perimeter-triangle/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "a592d485-33aa-459e-9b98-b1e942ee8322",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# timeout\n",
+    "from itertools import combinations\n",
+    "def largestPerimeter(nums):\n",
+    "    s = combinations(nums, 3)\n",
+    "    res = 0\n",
+    "    for i in s:\n",
+    "        a, b, c = i[0], i[1], i[2]\n",
+    "        if a + b > c and a + c > b and b + c > a:\n",
+    "            res = max(res, a + b + c)\n",
+    "    return res\n",
+    "\n",
+    "nums = [2,1,2]\n",
+    "#nums = [1,2,1,10]\n",
+    "largestPerimeter(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "1159a9fa-2bb1-4ca3-a49c-8133a2da49ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def largestPerimeter(nums):\n",
+    "    nums.sort()\n",
+    "    res = 0\n",
+    "    i = len(nums) - 3\n",
+    "    while i >= 0:\n",
+    "        s = nums[i: i + 3]\n",
+    "        i -= 1\n",
+    "        if s[0] + s[1] > s[2] and s[0] + s[2] > s[1] and s[1] + s[2] > s[0]:\n",
+    "            return sum(s)\n",
+    "    return res\n",
+    "            \n",
+    "nums = [2,1,2]\n",
+    "nums = [1,2,1,10]\n",
+    "nums = [3,2,3,4]\n",
+    "largestPerimeter(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "432b91af-75fb-434c-ace7-b4354f8e9ce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def largestPerimeter(self, nums: List[int]) -> int:\n",
+    "        nums.sort()\n",
+    "        res = 0\n",
+    "        i = len(nums) - 3\n",
+    "        while i >= 0:\n",
+    "            s = nums[i: i + 3]\n",
+    "            i -= 1\n",
+    "            if s[0] + s[1] > s[2] and s[0] + s[2] > s[1] and s[1] + s[2] > s[0]:\n",
+    "                return sum(s)\n",
+    "        return res\n",
+    "                \n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a57503d-fe63-43c0-a517-8c477b09af86",
+   "metadata": {},
+   "source": [
+    "# 129 989. 数组形式的整数加法\n",
+    "\n",
+    "https://leetcode.cn/problems/add-to-array-form-of-integer/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "9905b6bb-0456-4124-bf26-90a8a8c76eef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def addToArrayForm(num, k):\n",
+    "    s = [str(i) for i in num]\n",
+    "    s = list(str(int(\"\".join(s)) + k))\n",
+    "    s = [int(i) for i in s]\n",
+    "    return s\n",
+    "\n",
+    "num = [1,2,0,0]\n",
+    "k = 34\n",
+    "addToArrayForm(num, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "a4bc742e-143b-4d1e-9e4c-d4ce44a6e948",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (3604654528.py, line 15)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[105], line 15\u001b[0;36m\u001b[0m\n\u001b[0;31m    if temp\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def addToArrayForm(num, k):\n",
+    "    s = list(str(k))\n",
+    "    s = [int(i) for i in s]\n",
+    "    i = 1\n",
+    "    Plus = 0\n",
+    "    while i <= len(s) and i <= len(num):\n",
+    "        temp = num[-i] + s[-i]\n",
+    "        if temp < 10:\n",
+    "            num[-i] = temp + Plus\n",
+    "            Plus = 0\n",
+    "        else:\n",
+    "            num[-i] = temp - 10 + Plus\n",
+    "            Plus = 1\n",
+    "        i += 1\n",
+    "    if temp:\n",
+    "        \n",
+    "    return num        \n",
+    "\n",
+    "num = [1,2,0,0]\n",
+    "k = 34\n",
+    "num = [2,7,4]\n",
+    "k = 181\n",
+    "num = [2,1,5]\n",
+    "k = 8003\n",
+    "addToArrayForm(num, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f59cfb-3944-4104-85a5-e438addea154",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def addToArrayForm(self, num: List[int], k: int) -> List[int]:\n",
+    "        s = [str(i) for i in num]\n",
+    "        s = list(str(int(\"\".join(s)) + k))\n",
+    "        s = [int(i) for i in s]\n",
+    "        return s:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e30353dc-47bc-40a3-8df1-aa556f10704c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c30aeda2-76e4-422e-85b9-7480b7265084",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "b820d1aa-cf5f-4f90-8976-e143fe773bc2",
+   "id": "e386a68e-b1b7-4dc0-b7a3-8cacffec4e4b",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "# 953. 验证外星语词典\n",
+    "\n",
+    "https://leetcode.cn/problems/verifying-an-alien-dictionary/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "692e4757-247b-4b66-aef0-3df874da5163",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isAlienSorted(words, order):\n",
+    "    pass\n",
+    "\n",
+    "words = [\"hello\",\"leetcode\"]\n",
+    "order = \"hlabcdefgijkmnopqrstuvwxyz\"\n",
+    "isAlienSorted(words, order)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8da1462-409c-43e1-9deb-5e00c08bdcab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isAlienSorted(self, words: List[str], order: str) -> bool:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65902b02-115d-4e2b-ba9b-d1e322490a4f",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
