--- a/1-Basic Alogrithm/5. Stack and Queue.ipynb
+++ b/1-Basic Alogrithm/5. Stack and Queue.ipynb
@@ -299,7 +299,10 @@
    "id": "ec2acf83-c0ac-428d-848f-d1581905d642",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def evalRPN(self, tokens: List[str]) -> int:"
+   ]
   }
  ],
  "metadata": {
