--- a/1-Basic Alogrithm/5. Stack and Queue.ipynb
+++ b/1-Basic Alogrithm/5. Stack and Queue.ipynb
@@ -282,16 +282,63 @@
    "source": [
     "# 03 150. 逆波兰表达式求值\n",
     "\n",
-    "https://leetcode.cn/problems/evaluate-reverse-polish-notation/description/"
+    "https://leetcode.cn/problems/evaluate-reverse-polish-notation/description/\n",
+    "\n",
+    "向0取整，也称为“截断取整”，是一种取整方式。它将一个浮点数取整为最接近但小于它的整数。具体来说，对于正数，向0取整将取其整数部分；对于负数，向0取整将取其绝对值的整数部分并添加负号。例如，17 / 10 = 1，5 / 2 = 2，而 -9 / 4 = -2。在C和Java中，这种取整方式被默认采用，并可以通过trunc函数来实现。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "c1828590-bd07-4365-ae52-4faf29321968",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-7"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "def evalRPN(tokens):\n",
+    "    q = deque()\n",
+    "    m = [\"+\", \"-\", \"*\", \"/\"]\n",
+    "    for i in tokens:\n",
+    "        if i not in m:\n",
+    "            q.append(int(i))\n",
+    "        else:\n",
+    "            if i == \"+\":\n",
+    "                a = q.pop()\n",
+    "                b = q.pop()\n",
+    "                q.append(a + b)\n",
+    "            elif i == \"-\":\n",
+    "                a = q.pop()\n",
+    "                b = q.pop()\n",
+    "                q.append(b - a)\n",
+    "            elif i == \"*\":\n",
+    "                a = q.pop()\n",
+    "                b = q.pop()\n",
+    "                q.append(a * b)     \n",
+    "            elif i == \"/\":\n",
+    "                a = q.pop()\n",
+    "                b = q.pop()\n",
+    "                q.append(int(b / a) if b * a > 0 else -(abs(b) // abs(a)))\n",
+    "    return q[0]\n",
+    "        \n",
+    "    \n",
+    "tokens = [\"2\",\"1\",\"+\",\"3\",\"*\"]\n",
+    "#tokens = [\"4\",\"13\",\"5\",\"/\",\"+\"]\n",
+    "#tokens = [\"10\",\"6\",\"9\",\"3\",\"+\",\"-11\",\"*\",\"/\",\"*\",\"17\",\"+\",\"5\",\"+\"]\n",
+    "tokens = [\"4\",\"-2\",\"/\",\"2\",\"-3\",\"-\",\"-\"]   # -7\n",
+    "\n",
+    "evalRPN(tokens)"
+   ]
   },
   {
    "cell_type": "code",
@@ -301,7 +348,31 @@
    "outputs": [],
    "source": [
     "class Solution:\n",
-    "    def evalRPN(self, tokens: List[str]) -> int:"
+    "    def evalRPN(self, tokens: List[str]) -> int:\n",
+    "        q = deque()\n",
+    "        m = [\"+\", \"-\", \"*\", \"/\"]\n",
+    "        for i in tokens:\n",
+    "            if i not in m:\n",
+    "                q.append(int(i))\n",
+    "            else:\n",
+    "                if i == \"+\":\n",
+    "                    a = q.pop()\n",
+    "                    b = q.pop()\n",
+    "                    q.append(a + b)\n",
+    "                elif i == \"-\":\n",
+    "                    a = q.pop()\n",
+    "                    b = q.pop()\n",
+    "                    q.append(b - a)\n",
+    "                elif i == \"*\":\n",
+    "                    a = q.pop()\n",
+    "                    b = q.pop()\n",
+    "                    q.append(a * b)     \n",
+    "                elif i == \"/\":\n",
+    "                    a = q.pop()\n",
+    "                    b = q.pop()\n",
+    "                    q.append(int(b / a) if b * a > 0 else -(abs(b) // abs(a)))\n",
+    "        return q[0]\n",
+    "            "
    ]
   }
  ],
